src/test/resources/syntax_errors/lex_error__unclosed_parenthesis.notc
void main() {
    string s = "unclosed;
}
